[gd_scene load_steps=25 format=3 uid="uid://chpxkw26mvq3k"]

[ext_resource type="Script" uid="uid://bscemwjnnb2is" path="res://Scripts/Entities/player.gd" id="1_vgqql"]
[ext_resource type="Texture2D" uid="uid://ctr48nrwrqb7d" path="res://Sprites/Characters/Player/idle.png" id="2_fkybt"]
[ext_resource type="Texture2D" uid="uid://wpf1586bga5w" path="res://Sprites/Characters/Player/run.png" id="3_x3wgy"]
[ext_resource type="Texture2D" uid="uid://d0g15y676v3xf" path="res://Sprites/Characters/Player/jump.png" id="4_3smsa"]
[ext_resource type="Texture2D" uid="uid://dlk0jh81adpkx" path="res://Sprites/Characters/Player/attack.png" id="5_8erm5"]
[ext_resource type="PackedScene" uid="uid://bml8o3fl7yfw0" path="res://Scenes/Components/health_component.tscn" id="6_8erm5"]
[ext_resource type="PackedScene" uid="uid://cf4duabfcn6fa" path="res://Scenes/Components/hit_flash_component.tscn" id="7_85s6f"]
[ext_resource type="PackedScene" uid="uid://mca7y2rl04ft" path="res://Scenes/Components/hit_box_component.tscn" id="7_f1ek2"]
[ext_resource type="Shader" uid="uid://7i1wxshtsd8b" path="res://Resources/Shaders/hit_flash.tres" id="8_85s6f"]
[ext_resource type="PackedScene" uid="uid://bb8nlyevsjr62" path="res://Scenes/Components/attack_component.tscn" id="8_tx1dd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fkybt"]
radius = 9.0
height = 42.0

[sub_resource type="Animation" id="Animation_tx1dd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/PlayerSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_fkybt")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/PlayerSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/AttackComponent/AttackCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1ek2"]
radius = 20.0
height = 54.0

[sub_resource type="Animation" id="Animation_7dp3o"]
resource_name = "attack"
length = 0.30001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_8erm5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06374327, 0.16474329, 0.21991718, 0.25955224),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/AttackComponent/AttackCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.064493224, 0.22406678),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/AttackComponent/AttackCollision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.064670295, 0.16660875),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(35, 8), Vector2(37, 4)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pivot/AttackComponent/AttackCollision:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.064670295, 0.16660875),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("CapsuleShape2D_f1ek2"), SubResource("CapsuleShape2D_f1ek2")]
}

[sub_resource type="Animation" id="Animation_ukyrk"]
resource_name = "fall"
length = 0.20001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_3smsa")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.10000001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_8erm5"]
resource_name = "float"
length = 0.10001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_3smsa")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_f1ek2"]
resource_name = "idle"
length = 0.40001002
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_fkybt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerCollision:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pu2lt"]
resource_name = "jump"
length = 0.10001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_3smsa")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gymyn"]
resource_name = "run"
length = 0.70001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_x3wgy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4iuc"]
_data = {
&"RESET": SubResource("Animation_tx1dd"),
&"attack": SubResource("Animation_7dp3o"),
&"fall": SubResource("Animation_ukyrk"),
&"float": SubResource("Animation_8erm5"),
&"idle": SubResource("Animation_f1ek2"),
&"jump": SubResource("Animation_pu2lt"),
&"run": SubResource("Animation_gymyn")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_14y0q"]
shader = ExtResource("8_85s6f")
shader_parameter/enabled = false
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8erm5"]
radius = 6.0
height = 36.0

[sub_resource type="GDScript" id="GDScript_8erm5"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="CircleShape2D" id="CircleShape2D_8erm5"]
radius = 22.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_vgqql")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("CapsuleShape2D_fkybt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_h4iuc")
}
autoplay = "idle"

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="FloatCooldownTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="RespawnTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true

[node name="HitSlowTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.05

[node name="HealthComponent" parent="." instance=ExtResource("6_8erm5")]
unique_name_in_owner = true
visible = false
position = Vector2(0, -15)
MAX_HEALTH = 100.0

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("sprite", "healthComponent") instance=ExtResource("7_85s6f")]
sprite = NodePath("../Pivot/PlayerSprite")
healthComponent = NodePath("../HealthComponent")

[node name="Pivot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="PlayerSprite" type="Sprite2D" parent="Pivot"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_14y0q")
position = Vector2(-1, 0)
texture = ExtResource("2_fkybt")
hframes = 4

[node name="AttackComponent" parent="Pivot" instance=ExtResource("8_tx1dd")]
collision_layer = 0
collision_mask = 8

[node name="AttackCollision" type="CollisionShape2D" parent="Pivot/AttackComponent"]
position = Vector2(37, 4)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_f1ek2")
disabled = true
debug_color = Color(0.9113462, 0.21197182, 0.52477556, 0.41960785)

[node name="HitBoxComponent" parent="Pivot" node_paths=PackedStringArray("health_component") instance=ExtResource("7_f1ek2")]
collision_layer = 2
collision_mask = 0
health_component = NodePath("../../HealthComponent")
invincibility_time = 1.0

[node name="Hitbox" type="CollisionShape2D" parent="Pivot/HitBoxComponent"]
position = Vector2(0, 12)
shape = SubResource("CapsuleShape2D_8erm5")
debug_color = Color(0.32774568, 0.62004066, 0.20378724, 0.41960785)

[node name="InteractionArea" type="Area2D" parent="Pivot"]
collision_layer = 0
collision_mask = 20
script = SubResource("GDScript_8erm5")

[node name="InteractionBox" type="CollisionShape2D" parent="Pivot/InteractionArea"]
position = Vector2(1, 11)
shape = SubResource("CircleShape2D_8erm5")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timers/RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="Timers/HitSlowTimer" to="." method="_on_hit_slow_timer_timeout"]
[connection signal="hp_changed" from="HealthComponent" to="." method="_on_hp_changed"]
[connection signal="damage_dealt" from="Pivot/AttackComponent" to="." method="_on_attack_component_damage_dealt"]
[connection signal="on_knockback" from="Pivot/HitBoxComponent" to="." method="_on_hit_box_knockback"]
[connection signal="area_entered" from="Pivot/InteractionArea" to="." method="_on_interaction_area_entered"]
